demo-8/securitygroup.tf
resource "aws_security_group" "allow_ssh" {
  vpc_id  = "${aws_vpc.main.id}"
  name  = "allow_ssh"
  description = "allow ssh from my ip and egress traffic"
  egress {
  from_port = 0
  to_port = 0
  protocol  = "-1"
  cidr_blocks = ["0.0.0.0/0"]
}

  ingress {
  from_port = 22
  to_port = 22
  protocol  = "tcp"
  cidr_blocks = ["190.247.145.217/32"]
}

tags {
  Name  = "allow_ssh"
}
}
